--- a/src/app/ajuda/ajuda.component.html
+++ b/src/app/ajuda/ajuda.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
-                <h1 class="d-flex justify-content-center mt-5" style="color:#7a297a">Perguntas Frequentes</h1>
+                <h1 class="d-flex justify-content-center pt-br mt-5 mb-4"><strong>Perguntas Frequentes</strong> </h1>
 
                 <div class="container" id="box-ajuda">
                     <div id="accordion">
