--- a/src/app/sobre/sobre.component.css
+++ b/src/app/sobre/sobre.component.css
@@ -1,5 +1,4 @@
-/* data-toggle="collapse" data-target="#laura"><!--Collapse: responsavel por abrir as descrições ao click do mousse-->
-<div id="laura" class="collapse" aria-labelledby="foto1" data-parent="#accordionGroup"><!--aria-labelledby e data-parent: são responsaveis por fechar automaticamente um collapse caso outro collapse seja aberto-->*/
+
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif&display=swap');
 
 @-webkit-keyframes swing
@@ -87,36 +86,13 @@ color:#7a297a;
 margin-top: 4%;
 }
 
-/*#pt1
-{
-    background-color: rgba(0,0,0,.3); 
-    color: white
-}*/
+
 
 .letrac
 {
     color: black;
 }
-/*.fotos{
-webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
-/*transition: width 2s, height 2s, transform 2s;
-}
 
-.fotos:hover {
-width: 300px;
-height: 300px;
--webkit-transform: rotate(360deg); /* Safari */
-/*transform: rotate(360deg);
-}*/
-
-/*.bg{
-    background-image: url(../../assets/image/fteste.jpg);
-}
-
-/*.fotos{
-    width: 280px;
-    height: 250px;
-}*/
 
 .bg{
     background-image: url(../../assets/image/fundogeo.jpg);
@@ -128,23 +104,6 @@ height: 300px;
     position: absolute;
     z-index: -1;
 }
-
- 
-
-
-/*.collapse-text{
-    width: 280px;
-    text-align: justify;
-    padding:30px;
-    border: 1px solid #e9e0e0;
-    background: white;
-    transition-duration: 2s;
-}*/
-
-/*.collapse-text h5{
-    text-align: center;
-    padding-bottom: 20px;
-}*/
 
 .fotos {
     width:195px;
@@ -200,65 +159,7 @@ height: 300px;
     margin-bottom: 10%;
 }
 
-/*@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Lobster&display=swap');
-
-#titulo
-{
-text-align: center;
-font-family: 'Indie Flower', cursive;
-font-size: 70px;
-}
-
-#pt1
-{
-    background-color: rgba(0,0,0,.9); 
-    color: white
-}
-
-.letrac
-{
-    color: black;
-}
-/*.fotos{
-webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
-/*transition: width 2s, height 2s, transform 2s;
-}
-
-.fotos:hover {
-width: 300px;
-height: 300px;
--webkit-transform: rotate(360deg); /* Safari */
-/*transform: rotate(360deg);
-}*/
-
-/*.bg{
-    background-image: url(../../assets/image/fteste.jpg);
-}
-
-/*.fotos{
-    width: 280px;
-    height: 250px;
-}*/
-
-/*
-.bg{
-    background: url(../../assets/image/fteste.jpg);
-}
-
-.collapse-text{
-    width: 280px;
+.centraliza{
     text-align: justify;
-    padding:30px;
-    border: 1px solid #e9e0e0;
-    background: white;
-    transition-duration: 2s;
+    margin-top: 2%; 
 }
-
-.collapse-text h5{
-    text-align: center;
-    padding-bottom: 20px;
-}
-.fotos{
-    width:280px;
-    height: 250px;
-}*/
