--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -8,7 +8,7 @@
         <div class="col-md-8">
             <div class="col-md-3"></div>
             <div class="col-md-5 container pt-br mt-5 mb-4">
-                <h1 id="titulo"><strong>Sobre Nós</strong></h1>
+                <h1 id="titulo" ><strong>Sobre Nós</strong></h1>
             </div>
             <div class="col-md-4"></div>
             <div class="col-sm-12 ">
@@ -26,8 +26,8 @@
                             <div class="d-flex justify-content-center ">
                                 <img class ="valores" src="../../assets/image/museu.png"  alt="">
                             </div>
-                             <div class="d-flex justify-content-center mt-3">
-                                <p>Cultura é o que nos torna humanos</p>
+                             <div class="d-flex justify-content-center text-center mt-3">
+                                <p> <strong>Cultura é o que nos torna humanos</strong></p>
                              </div>
                             
                         </div>
@@ -35,8 +35,8 @@
                             <div class="d-flex justify-content-center ">
                                 <img class ="valores" src="../../assets/image/chepeu.png"  alt=""> 
                             </div>
-                            <div class="d-flex justify-content-center mt-3">
-                                <p>Cultura é o que nos torna humanos</p>
+                            <div class="d-flex justify-content-center text-center mt-3">
+                                <p><strong>Educação é o que transforma o mundo</strong></p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -44,7 +44,7 @@
                                 <img class ="valores" src="../../assets/image/intercambiocheck.png"  alt="">
                             </div>
                              <div class="d-flex justify-content-center mt-3">
-                                <p>Cultura é o que nos torna humanos</p>
+                                <p><strong>Conectar é o que nos faz maiores</strong></p>
                              </div>
                             
                         </div>
@@ -63,9 +63,9 @@
                             <img src="../../assets/image/laura.jfif" class="fotos" 
                                 data-toggle="collapse" data-target="#laura"><!--Collapse: responsavel por abrir as descrições ao click do mousse-->
                             <div id="laura" class="collapse" aria-labelledby="foto1" data-parent="#accordionGroup"><!--aria-labelledby e data-parent: são responsaveis por fechar automaticamente um collapse caso outro collapse seja aberto-->
-                                <div class="collapse-text">
+                                <div class="collapse-text mt-3">
                                     <h5>Laura Oliveira Pedro</h5>
-                                    <p>Estudante de Análise e Desenvolvimento de Sistemas, apaixonada por tecnologia e
+                                    <p >Estudante de Análise e Desenvolvimento de Sistemas, apaixonada por tecnologia e
                                         as transformações que ela pode proporcionar para a sociedade,
                                         principalmente para os jovens. Sou movida pela constante vontade de aprender
                                         coisas novas e sair da minha zona de conforto, ser constantemente desafiada é o
@@ -82,7 +82,7 @@
                         <div id="foto2">
                             <img src="../../assets/image/edson.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#edson">
-                            <div class="collapse" id="edson" aria-labelledby="foto2" data-parent="#accordionGroup">
+                            <div class="collapse mt-3"  id="edson" aria-labelledby="foto2" data-parent="#accordionGroup">
                                 <div class="collapse-text">
                                     <h5>Edson Santana</h5>
                                     <p>Estudante de Análise e desenvolvimento de Sistema, fascinado por tecnologia e
@@ -103,7 +103,7 @@
                             <img src="../../assets/image/AnaB.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#ana">
 
-                            <div class="collapse" id="ana" aria-labelledby="foto3" data-parent="#accordionGroup">
+                            <div class="collapse mt-3" id="ana" aria-labelledby="foto3" data-parent="#accordionGroup">
                                 <div class="collapse-text">
                                     <h5 class="card-title">Ana Beatriz</h5>
                                     <p class="card-text">Uma jovem mulher apaixonada por aprender e ensinar que
@@ -129,7 +129,7 @@
                         <div id="foto4">
                             <img src="../../assets/image/italo.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#italo">
-                            <div class="collapse" id="italo" aria-labelledby="foto4" data-parent="#accordionGroup">
+                            <div class="collapse mt-3" id="italo" aria-labelledby="foto4" data-parent="#accordionGroup">
                                 <div class="collapse-text">
                                     <h5>Italo Andrew</h5>
                                     <p>Uma pessoa com uma vontade enorme de aprender e conhecer coisas
@@ -150,7 +150,7 @@
                             <img src="../../assets/image/wesley.jpeg" class="fotos"
                                 data-toggle="collapse" data-target="#wesley">
                             <div class="collapse" id="wesley" aria-labelledby="foto5" data-parent="#accordionGroup">
-                                <div class="collapse-text">
+                                <div class="collapse-text mt-3">
                                     <h5>Wesley Paulow</h5>
                                     <p>Um sujeito periférico, 23 anos, há muito interessado por tecnologia, mas só há
                                         pouco verdadeiramente enamorado por ela. Entre a cruz e a caldeirinha ao pensar
