--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -2,32 +2,32 @@
     <div class="container-fluid p-0">
         <div class="row">
             <div class="col-md-8 d-flex justify-content-center">
-                <div class="col-md-8">
-                    <h1 id="titulo"><strong>Fale Conosco</strong></h1>
+                <div class="col-md-8 pt-br mt-5 mb-4">
+                    <h1 id="titulo "><strong>Fale Conosco</strong></h1>
                     <div class="mt-3 pb-3">
                         <div class="form-group">
                             <label for="nome"><strong>Nome</strong></label>
                             <input type="text" class="form-control" id="nome" [(ngModel)]="nome"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="nome"
-                                placeholder="Digite seu nome..." autofocus required>
+                                placeholder="Digite seu nome..." autofocus required><br>
 
 
                             <label for="sobNome"><strong>Sobrenome</strong></label>
                             <input type="text" class="form-control" id="sobNome" [(ngModel)]="sobNome"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="sobrenome"
-                                placeholder="Digite seu sobrenome..." required>
+                                placeholder="Digite seu sobrenome..." required><br>
 
 
                             <label for="email"><strong>E-mail</strong></label>
                             <input type="email" class="form-control" id="email" [(ngModel)]="email"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="emailHelp"
-                                placeholder="Digite seu e-mail..." required>
+                                placeholder="Digite seu e-mail..." required><br>
 
 
                             <label for="telefone"><strong>Telefone</strong></label>
                             <input for="text" class="form-control" id="telefone" [(ngModel)]="telefone"
                                 [ngModelOptions]="{standalone: true}" aria-describedby="telefone"
-                                placeholder="Digite seu telefone..." required>
+                                placeholder="Digite seu telefone..." required><br>
 
 
                             <label for="caixatxt"><strong>Mensagem</strong></label>
