alteração no layout da página inicial/login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,96 +1,131 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<img src="../../assets/image/gifback.gif" alt="" id="backgroundlogin">
-
-<div class="container d-flex justify-content-end">
-
-  <div class="card" id="login">
-    <div class="card-header" id="cardheader">
-      <img src="../../assets/image/iconLampp.png" alt="" id="imglogin"><img src="../../assets/image/login.png" alt=""
-        id="login1">
-    </div>
-    <div class="card-body">
-      <div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            [(ngModel)]="usuario.email" placeholder="Email">
-
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Senha</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="usuario.senha"
-            placeholder="Senha">
-        </div>
-        
-        <button type="submit" class="btn btn-outline-purple" (click)="login()">Entrar</button>
-
-        <!-- Botão para acionar modal -->
-        <button type="button" class="btn btn-outline-purple" id="cadastrar" data-toggle="modal"
-          data-target="#ExemploModalCentralizado">
-          Cadastre-se
-        </button>
+<!--<img src="../../assets/image/gifback.gif" alt="" id="backgroundlogin">-->
 
 
-        <!-- Modal -->
-        <div class="modal fade" id="ExemploModalCentralizado" tabindex="-1" role="dialog"
-          aria-labelledby="TituloModalCentralizado" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="TituloModalCentralizado">Cadastro</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+<div class="container.flex backgroundlogin">
+  <div class="row">
+    <div class="col-md-4 mt-5 ml-5">
+    <p id="homeOi"><strong>Bem-Vindes à Eureka sua rede cultural</strong></p>
+  </div>
+
+  <div class="col-md-4 d-flex justify-content-end mt-5">
+      <div class="card" id="login">
+          <div class="card-header" id="cardheader">
+            <strong id="logintitle">LOGIN</strong>
+            <!--<img src="../../assets/image/iconLampp.png" alt="" id="imglogin"><img src="../../assets/image/login.png" alt=""
+              id="login1">-->
+          </div>
+          <div class="card-body">
+            <div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                  [(ngModel)]="usuario.email" placeholder="Email">
+      
               </div>
-              <div class="modal-body">
-                <div class="mt-3 pb-3">
-                  <div class="form-group">
-                    <!-- Input nome -->
-                    <label for="nome">Nome Completo</label>
-                    <input type="text" class="form-control" id="nome" [(ngModel)]="usuario.nome"
-                      [ngModelOptions]="{standalone: true}" aria-describedby="nome" placeholder="Digite seu nome..."
-                      autofocus required>
-                    <span class="erro" *ngIf='erroNome'>{{erroNome}}<br></span><br>
-
-                    <!-- Input telefone -->
-                    <label for="telefone">Telefone</label>
-                    <input type="number" class="form-control" id="telefone" [(ngModel)]="usuario.telefone"
-                      [ngModelOptions]="{standalone: true}" aria-describedby="telefone"
-                      placeholder="Digite seu telefone..." required>
-                    <span class="erro" *ngIf='erroTelefone'>{{erroTelefone}}<br></span><br>
-
-                    <label for="email">E-mail</label>
-                    <input type="email" class="form-control" id="email" [(ngModel)]="usuario.email"
-                      [ngModelOptions]="{standalone: true}" aria-describedby="emailHelp"
-                      placeholder="Digite seu e-mail..." required>
-                    <span class="erro" *ngIf='erroEmail'>{{erroEmail}}<br></span><br>
-
-                    <label for="senha">Senha</label>
-                    <input type="password" class="form-control" id="senha" [(ngModel)]="usuario.senha"
-                      [ngModelOptions]="{standalone: true}" placeholder="Digite sua Senha..." (keyup) = "mostrarStatus()" required>
-                    <span class="forte" *ngIf='senhaForte'>{{senhaForte}}<br></span>
-                    <span class="fraca" *ngIf='senhaFraca'>{{senhaFraca}}<br></span>
-                    <span class="erro" *ngIf='erroSenha'>{{erroSenha}}<br></span><br>
-
-                    <label for="confirmacao">Confirme a Senha</label>
-                    <input type="password" class="form-control" id="confirmacao" [(ngModel)]="confirmacao"
-                      [ngModelOptions]="{standalone: true}" placeholder="Confirme sua Senha" required>
-                    <span class="erro" *ngIf='erroConfirmacao'>{{erroConfirmacao}}<br></span>
-
+              <div class="form-group">
+                <label for="exampleInputPassword1">Senha</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="usuario.senha"
+                  placeholder="Senha">
+              </div>
+              
+              <button type="submit" class="btn btn-outline-purple" (click)="login()">Entrar</button>
+      
+              <!-- Botão para acionar modal -->
+              <button type="button" class="btn btn-outline-purple" id="cadastrar" data-toggle="modal"
+                data-target="#ExemploModalCentralizado">
+                Cadastre-se
+              </button>
+      
+      
+              <!-- Modal -->
+              <div class="modal fade" id="ExemploModalCentralizado" tabindex="-1" role="dialog"
+                aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="TituloModalCentralizado">Cadastro</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="mt-3 pb-3">
+                        <div class="form-group">
+                          <!-- Input nome -->
+                          <label for="nome">Nome Completo</label>
+                          <input type="text" class="form-control" id="nome" [(ngModel)]="usuario.nome"
+                            [ngModelOptions]="{standalone: true}" aria-describedby="nome" placeholder="Digite seu nome..."
+                            autofocus required>
+                          <span class="erro" *ngIf='erroNome'>{{erroNome}}<br></span><br>
+      
+                          <!-- Input telefone -->
+                          <label for="telefone">Telefone</label>
+                          <input type="number" class="form-control" id="telefone" [(ngModel)]="usuario.telefone"
+                            [ngModelOptions]="{standalone: true}" aria-describedby="telefone"
+                            placeholder="Digite seu telefone..." required>
+                          <span class="erro" *ngIf='erroTelefone'>{{erroTelefone}}<br></span><br>
+      
+                          <label for="email">E-mail</label>
+                          <input type="email" class="form-control" id="email" [(ngModel)]="usuario.email"
+                            [ngModelOptions]="{standalone: true}" aria-describedby="emailHelp"
+                            placeholder="Digite seu e-mail..." required>
+                          <span class="erro" *ngIf='erroEmail'>{{erroEmail}}<br></span><br>
+      
+                          <label for="senha">Senha</label>
+                          <input type="password" class="form-control" id="senha" [(ngModel)]="usuario.senha"
+                            [ngModelOptions]="{standalone: true}" placeholder="Digite sua Senha..." (keyup) = "mostrarStatus()" required>
+                          <span class="forte" *ngIf='senhaForte'>{{senhaForte}}<br></span>
+                          <span class="fraca" *ngIf='senhaFraca'>{{senhaFraca}}<br></span>
+                          <span class="erro" *ngIf='erroSenha'>{{erroSenha}}<br></span><br>
+      
+                          <label for="confirmacao">Confirme a Senha</label>
+                          <input type="password" class="form-control" id="confirmacao" [(ngModel)]="confirmacao"
+                            [ngModelOptions]="{standalone: true}" placeholder="Confirme sua Senha" required>
+                          <span class="erro" *ngIf='erroConfirmacao'>{{erroConfirmacao}}<br></span>
+      
+                        </div>
+      
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                      <button type="button" class="btn btn-outline-purple" (click)="validar()">Cadastrar</button>
+                    </div>
                   </div>
-
                 </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                <button type="button" class="btn btn-outline-purple" (click)="validar()">Cadastrar</button>
               </div>
             </div>
           </div>
         </div>
-      </div>
+  </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 d-flex justify-content-end">
+      <img src="../../assets/image/homegif.gif" alt="">
+    </div>
+
+    <div class="col-md-4" id="descricao">
+      <p>Encontre aqui novas ideias</p>
+      <p>material de estudo</p>
+      <p>rolês culturais</p>
+      <p>conexões</p>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-4 align-self-center" id="compartilhar">
+      <p>Compartilhe rolês, dúvidas</p>
+      <p>e o mais importante</p>
+      <p><strong>CONHECIMENTO</strong></p>
+    </div>
+
+    <div class="col-md-4">
+       <img src="../../assets/image/shareinfo.gif" alt="">
+  </div>
+
+
 </div>
