--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif&display=swap');
+
 *{
     margin: 0%;
     padding: 0%;
@@ -17,12 +19,12 @@
     height: 25%;
     padding: 0%;
   }
-  #backgroundlogin{
+  /*#backgroundlogin{
     position: absolute;
     z-index: -1;
     width: 100%;
     height: 90%;
-  }
+  }*/
 
   #login1{
     margin-left: 5%;
@@ -30,13 +32,13 @@
     height: 70%;
   }
 
-  .card{
+  /*.card{
     background-color: rgba(134, 132, 132, 0.1);
-  }
+  }*/
 
-  #cardheader{
+  /*#cardheader{
     background-color:rgba(134, 132, 132, 0.2);
-  }
+  }*/
 
   .btn{
     color: white;
@@ -88,5 +90,38 @@ input[type=number] {
   font-size: 12px;
   color:orange;
   padding-left: 10px;
+}
+
+.backgroundlogin{
+  background-image: url(../../assets/image/fundogeo.jpg);
+  background-position: right top;
+  background-repeat: repeat-y;
+}
+
+#homeOi{
+  font-size: 60px;
+  color: #7a297a;
+  font-family: 'Noto Serif', serif;
+
+}
+
+#logintitle{
+  color: #7a297a;
+  font-family: 'Noto Serif', serif;
+  font-size: 30px;
+  margin-left: 25%;
+}
+
+#descricao{
+  font-size: 30px;
+  margin-left: 10px;
+  margin-top:5%;
+}
+
+#compartilhar{
+  font-size: 30px;
+  margin-left: 5%;
+  margin-top:5%;
+  
 }
   
