alteração de foto no sobre nós, integrante laura

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -60,7 +60,7 @@
                     <!--Biografia da Laura-->
                     <div class="col-sm-4">
                         <div id="foto1">
-                            <img src="../../assets/image/laura.jfif" class="fotos" 
+                            <img src="../../assets/image/lauraO.jpg" class="fotos" 
                                 data-toggle="collapse" data-target="#laura"><!--Collapse: responsavel por abrir as descrições ao click do mousse-->
                             <div id="laura" class="collapse" aria-labelledby="foto1" data-parent="#accordionGroup"><!--aria-labelledby e data-parent: são responsaveis por fechar automaticamente um collapse caso outro collapse seja aberto-->
                                 <div class="collapse-text mt-3">
