alteração layout: página inicial/login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
 <div class="container.flex backgroundlogin">
   <div class="row">
     <div class="col-md-4 mt-5 ml-5">
-    <p id="homeOi"><strong>Bem-Vindes à Eureka sua rede cultural</strong></p>
+    <p id="homeOi"><strong>Bem-Vindes à <strong id="eureka">Eureka</strong> sua rede cultural</strong></p>
   </div>
 
   <div class="col-md-4 d-flex justify-content-end mt-5">
