mudanças no rodapé da página e logo

--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,13 +1,56 @@
-<!-- Footer -->
-<div class="container.fluid" id="teste">
-  <footer class="page-footer bottom" id="rodape" style="background-color: #7a297a;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3" >© 2019 Copyright:
-        <a href="https://mdbootstrap.com/education/bootstrap/"> Eureka</a>
-      </div>
-      <!-- Copyright -->
-    
-    </footer>
-    <!-- Footer -->
-  </div>
+</head>
+<body>
+    <div class="container.fluid" id="teste">
+      <div class="footer-copyright text-center py-3" style="background-color: #7a297a;" id=rodape>
+            <a href="https://github.com/EdsonSantana93/ProjetoIntegradorAngular"><img src="../../assets/image/iconeoficial.png" width="30px" height="30px" alt=""><strong id="iconetitulo">eureka</strong></a>
+          </div>
+      
+      <div class="page-footer bottom" id="rodape" style="background-color: #7a297a;"> 
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-google"></a>
+            <a href="#" class="fa fa-instagram"></a>
+        </div>
+        
+        </div>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
