--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+
 #navtitile{
     color: black;
     width: 100%;
@@ -11,4 +13,10 @@ input[type=number] {
    -moz-appearance: textfield;
    appearance: textfield;
 
+}
+
+#titulonavbar{
+    color: #ffdb58;
+    font-family: 'Raleway', sans-serif;
+    margin-left: 1%;
 }
