--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+
 #rodape
 {
   color: white;
@@ -8,4 +10,58 @@
     bottom: 0;
     width: 100%;
     text-align: center;
+}
+
+/* Style all font awesome icons */
+.fa {
+  padding: 9px;
+  font-size: 20px;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  margin-bottom: 1%;
+  margin-left: 1%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+#iconetitulo{
+  font-family: 'Raleway', sans-serif;
+  font-size: 100%;
+  color: #ffdb58;
+  margin-left: 0.3%;
 }
