Inicio da modificação do 404 not found

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,8 +1,9 @@
 <div class="bg">
     <div class="row">
         <div class="col-mb-12" id="erro">
-            <h1> 404</h1>
-            <h2>ERROR NOT FOUND</h2>
+            <img src="./../../assets/image/404.gif" alt="">
+            <h2>Opss... Não encontramos nada por aqui!</h2>
+            <h2>Caso acredite que aqui deveria ter algo ou tem alguma duvida, entre em contato com o supoete <a href="#"[routerLink] = "['/contato']">Eureka</a></h2>
         </div>
     </div>
 </div>
