--- a/src/app/not-found/not-found.component.css
+++ b/src/app/not-found/not-found.component.css
@@ -1,23 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif&display=swap');
 #erro{
     width: 100%;
     text-align: center;
-    margin: 200px;
+    margin: 10px;
 }
 
 h1{
-    color: #606060;
+    color: #7a297a;
     font-size: 100px;
     text-shadow: 2px 2px 10px #101010;
 }
 
 h2{
-    color: #b0b0b0;
+    color: #c004c0;
 }
 
-.bg{
-    background: url(../../assets/image/fundo-cinza.png) no-repeat center top fixed;
-    -webkit-background-size: cover;
-    -moz-background-siz: cover;
-    -o-bakground-size: cover;
-    background-size: cover;
+img{
+    height: 50%;
+}
+
+h2{
+    font-family: 'Noto Serif', serif;
+    font-size: 20px;
 }
